--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "10.12.20",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -23,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +41,5 @@
   "bugs": {
     "url": "https://github.com/andrewbloom37/random-chord-generator/issues"
   },
-  "homepage": "https://github.com/andrewbloom37/random-chord-generator#readme"
+  "homepage": "https://andrewbloom37.github.io/random-chord-generator/"
 }
