--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/node": "10.12.20",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "@types/styled-components": "^4.1.8",
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "styled-components": "^4.1.3",
     "typescript": "3.2.4"
   },
   "scripts": {
