--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@types/jest": "23.3.13",
     "@types/node": "10.12.20",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "@types/styled-components": "^4.1.8",
     "gh-pages": "^2.0.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-scripts": "2.1.4",
     "styled-components": "^4.1.3",
-    "typescript": "3.2.4"
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
